Setup aliases for SSH hostnames

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,2 +1,29 @@
+# TODO figure out why symlinks don't work for this and svn
+
 Host *
 	ServerAliveInterval 60
+	IdentityFile=/Users/ian/.ssh/id_rsa
+
+Host veronica.dev
+    Hostname veronica.dev
+    User vagrant
+
+Host iandunn.name
+    Hostname iandunn.name
+    User iandunn.name
+
+Host wordcamp.org
+    Hostname wordcamp.org
+    User wordcamp
+
+Host wordpress.org
+    Hostname iandunn.dev.wordpress.org
+    User wporgdev
+
+Host wordpress.com
+    Hostname iandunn.dev.dfw.wordpress.com
+    User wpdev
+
+Host carlybish.com
+    Hostname holly.dreamhost.com
+    User carcha40
