Add ec2-tor-relay ssh host.

--- a/.ssh/config
+++ b/.ssh/config
@@ -26,3 +26,8 @@ Host wordpress.com
 Host carlybish.com
     Hostname holly.dreamhost.com
     User carcha40
+
+Host ec2-tor-relay
+	Hostname ec2-54-152-233-50.compute-1.amazonaws.com
+	User ubuntu
+	IdentityFile ~/.ssh/tor-cloud-servers.pem
