--- a/.ssh/config
+++ b/.ssh/config
@@ -14,6 +14,7 @@ Host iandunn.name
 Host wordcamp.org
 	Hostname wordcamp.org
 	User wordcamp
+	ProxyCommand ssh -W %h:%p -N -l iandunn proxy.automattic.com
 
 Host wordpress.org
 	Hostname iandunn.dev.wordpress.org
