--- a/.ssh/config
+++ b/.ssh/config
@@ -3,6 +3,17 @@
 Host *
 	ServerAliveInterval 60
 
+Host vvv-personal
+	HostName 192.168.50.4
+	User vagrant
+	Port 22
+	UserKnownHostsFile /dev/null
+	StrictHostKeyChecking no
+	PasswordAuthentication no
+	IdentityFile /Users/ian/vhosts/vvv-personal/.vagrant/machines/default/virtualbox/private_key
+	IdentitiesOnly yes
+	ForwardAgent yes
+
 Host iandunn.name
 	Hostname iandunn.name
 	User iandunn.name
