SSH: Add settings for vvv-wme host.

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,16 +3,21 @@
 Host *
 	ServerAliveInterval 60
 
-Host vvv-personal
+Host vvv-personal vvv-wme
 	HostName 192.168.50.4
 	User vagrant
 	Port 22
 	UserKnownHostsFile /dev/null
 	StrictHostKeyChecking no
 	PasswordAuthentication no
-	IdentityFile /Users/ian/vhosts/vvv-personal/.vagrant/machines/default/virtualbox/private_key
 	IdentitiesOnly yes
 	ForwardAgent yes
+
+Host vvv-personal
+	IdentityFile /Users/ian/vhosts/vvv-personal/.vagrant/machines/default/virtualbox/private_key
+
+Host vvv-wme
+	IdentityFile /Users/ian/vhosts/vvv-wme/.vagrant/machines/default/virtualbox/private_key
 
 Host iandunn.name
 	Hostname iandunn.name
