--- a/.subversion/config
+++ b/.subversion/config
@@ -5,7 +5,7 @@
 [tunnels]
 
 [miscellany]
-global-ignores = .idea .git* .DS_Store debug.log sandbox-functionality sandbox-functionality.php node_modules
+global-ignores = .idea .git* .DS_Store debug.log sandbox-functionality sandbox-functionality.php node_modules *.map
 
 [auto-props]
 
