--- a/.ssh/config
+++ b/.ssh/config
@@ -30,6 +30,10 @@ Host wordcamp.org
 	User wordcamp
 	ProxyCommand ssh -W %h:%p -N -l iandunn proxy.automattic.com
 
+Host support.wordcamp.org
+	Hostname support.wordcamp.org
+	User wordcamp
+
 Host wordpress.org
 	Hostname iandunn.dev.wordpress.org
 	User wporgdev
@@ -41,6 +45,10 @@ Host wordpress.com
 Host carlybish.com
 	Hostname holly.dreamhost.com
 	User carcha40
+
+Host level-3-media.com
+	Hostname app02.mpangohosting.com
+	User level3
 
 Host ec2-tor-relay
 	Hostname ec2-54-152-233-50.compute-1.amazonaws.com
