SSH: Update hostnames

--- a/.ssh/config
+++ b/.ssh/config
@@ -22,7 +22,7 @@ Host vvv-wme
 	IdentityFile /Users/ian/vhosts/vvv-wme/.vagrant/machines/default/virtualbox/private_key
 
 Host iandunn.name
-	Hostname iandunn.name
+	Hostname 205.186.187.77
 	User iandunn.name
 
 Host wordcamp.org
@@ -43,8 +43,8 @@ Host wordpress.com
 	User wpdev
 
 Host carlybish.com
-	Hostname holly.dreamhost.com
-	User carcha40
+	Hostname wp543664.dreamhostps.com
+	User wp_x7nhq7
 
 Host level-3-media.com
 	Hostname app02.mpangohosting.com
