Git Config: Set relative `gitignore` path and `simple` push mode

--- a/.gitconfig
+++ b/.gitconfig
@@ -31,7 +31,10 @@
 	cmd = '/Applications/DeltaWalker.app/Contents/MacOS/git-merge' "$LOCAL" "$REMOTE" "$BASE" "$MERGED"
 
 [core]
-	excludesfile = /Users/ian/.gitignore_global
+	excludesfile = ~/.gitignore_global
+
+[push]
+	default = simple
 
 [color]
 	ui = true
