phpcs: Set `colors` and `report_width`

--- a/phpcs/CodeSniffer.conf
+++ b/phpcs/CodeSniffer.conf
@@ -1,6 +1,12 @@
 <?php
- $phpCodeSnifferConfig = array (
-  'installed_paths' => './CodeSniffer/Standards/WordPress/',
-  'default_standard' => 'WordPress-Extra',
+
+// Install: ln -s ~/dotfiles/phpcs/CodeSniffer.conf /srv/tools/phpcs/CodeSniffer.conf
+
+$phpCodeSnifferConfig = array (
+	'installed_paths'  => './CodeSniffer/Standards/WordPress/',
+	'default_standard' => 'WordPress-Extra',
+	'colors'           => 1,
+	'report_width'     => 190,
 )
+
 ?>
