--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,4 @@
-# TODO figure out why symlinks don't work for this and svn
+# TODO figure out why symlinks don't work for this. Until then, have to manually copy this to ~/.ssh/config after making changes
 
 Host *
 	ServerAliveInterval 60
