Git/SVN: Ignore some more files

--- a/.subversion/config
+++ b/.subversion/config
@@ -1,4 +1,4 @@
 # TODO figure out why symlinks don't work for this. Until then, have to manually copy this to ~/.subversion/config after making changes
 
 [miscellany]
-global-ignores = .idea .git* .DS_Store debug.log sandbox-functionality sandbox-functionality.php node_modules *.map
+global-ignores = .idea .git* .DS_Store debug.log sandbox-functionality sandbox-functionality.php node_modules *.map *.diff *.patch
