SSH: Update WordCamp, add WP15, SM

--- a/.ssh/config
+++ b/.ssh/config
@@ -25,18 +25,17 @@ Host iandunn.name
 	Hostname 205.186.187.77
 	User iandunn.name
 
-Host wordcamp.org
-	Hostname wordcamp.org
-	User wordcamp
-	ProxyCommand ssh -W %h:%p -N -l iandunn proxy.automattic.com
-
 Host support.wordcamp.org
 	Hostname support.wordcamp.org
 	User wordcamp
 
-Host wordpress.org
-	Hostname iandunn.dev.wordpress.org
+Host wordpress.org wordcamp.org
+	Hostname iandunn.dev.ord.wordpress.org
 	User wporgdev
+
+Host wp15.wordpress.net
+	Hostname wp15.wordpress.net
+	User wp15
 
 Host wordpress.com
 	Hostname iandunn.dev.dfw.wordpress.com
@@ -49,6 +48,11 @@ Host carlybish.com
 Host level-3-media.com
 	Hostname app02.mpangohosting.com
 	User level3
+
+Host silencedmajority.org
+	Hostname silencedmajority.org
+	User silenced
+	Port 18765
 
 Host ec2-tor-relay
 	Hostname ec2-54-152-233-50.compute-1.amazonaws.com
