phpcs: Update install path

--- a/phpcs/CodeSniffer.conf
+++ b/phpcs/CodeSniffer.conf
@@ -1,12 +1,10 @@
 <?php
 
-// Install: ln -s ~/dotfiles/phpcs/CodeSniffer.conf /srv/tools/phpcs/CodeSniffer.conf
+// Install: ln -s ~/dotfiles/phpcs/CodeSniffer.conf /usr/local/Cellar/php-code-sniffer/3.1.1/CodeSniffer.conf
 
-$phpCodeSnifferConfig = array (
-	'installed_paths'  => './CodeSniffer/Standards/WordPress/',
+$phpCodeSnifferConfig = array(
+	'installed_paths'  => '/Users/iandunn/vhosts/tools/wordpress-coding-standards/',
 	'default_standard' => 'WordPress-Extra',
 	'colors'           => 1,
-	'report_width'     => 190,
-)
-
-?>
+	'report_width'     => 105,
+);
