SSH: Add wordpressfoundation.org

--- a/.ssh/config
+++ b/.ssh/config
@@ -33,6 +33,10 @@ Host wordpress.org wordcamp.org
 	Hostname iandunn.dev.ord.wordpress.org
 	User wporgdev
 
+Host wordpressfoundation.org
+	Hostname wordpressfoundation.org
+	User wpf
+
 Host wp15.wordpress.net
 	Hostname wp15.wordpress.net
 	User wp15
