Git: Don't do verbose commits.
Sometimes the diff isn't properly removed from the commit message automatically, and ends up being part of the final commit. It's also a better UX to `git show head` in a split terminal pane, rather than trying to have it cluttered into the same pane as the message.

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
 
 [alias]
 	co       = checkout
-	ci       = commit --verbose
+	ci       = commit
 	stat     = status
 	statlong = status --long
 	diffc    = diff --cached
