SSH: Add/update sites.

--- a/.ssh/config
+++ b/.ssh/config
@@ -22,14 +22,18 @@ Host vvv-wme
 	IdentityFile /Users/ian/vhosts/virtual-machines/vvv-wme/.vagrant/machines/default/virtualbox/private_key
 
 Host iandunn.name
-	Hostname 205.186.187.77
-	User iandunn.name
+	Hostname durin.dreamhost.com
+	User iandunn206
+
+Host samantha
+	Hostname 142.93.19.77
+	User root
 
 Host support.wordcamp.org
 	Hostname support.wordcamp.org
 	User wordcamp
 
-Host wordpress.org wordcamp.org
+Host wordpress.org wordcamp.org w.org
 	Hostname iandunn.dev.ord.wordpress.org
 	User wporgdev
 
@@ -41,7 +45,7 @@ Host wp15.wordpress.net
 	Hostname wp15.wordpress.net
 	User wp15
 
-Host wordpress.com
+Host wordpress.com wp.com
 	Hostname iandunn.dev.dfw.wordpress.com
 	User wpdev
 
@@ -56,4 +60,10 @@ Host level-3-media.com
 Host silencedmajority.org
 	Hostname silencedmajority.org
 	User silenced
+	Port 18765
+
+Host brewsworthy.net
+	# Hostname brewsworthy.net
+	Hostname 108.163.199.140
+	User brewswor
 	Port 18765
