phpcs: Update path

--- a/phpcs/CodeSniffer.conf
+++ b/phpcs/CodeSniffer.conf
@@ -1,6 +1,7 @@
 <?php
 
-// Install: ln -s ~/dotfiles/phpcs/CodeSniffer.conf /usr/local/Cellar/php-code-sniffer/3.1.1/CodeSniffer.conf
+// Install: ln -s ~/dotfiles/phpcs/CodeSniffer.conf /usr/local/Cellar/php-code-sniffer/3.3.0/bin/CodeSniffer.conf
+// That will need to be done after every `brew upgrade`, because the folder will change.
 
 $phpCodeSnifferConfig = array(
 	'installed_paths'  => '/Users/iandunn/vhosts/tools/wordpress-coding-standards/',
