PHPCS: Add note about username

--- a/phpcs/CodeSniffer.conf
+++ b/phpcs/CodeSniffer.conf
@@ -2,6 +2,7 @@
 
 // Install: ln -s ~/dotfiles/phpcs/CodeSniffer.conf /usr/local/Cellar/php-code-sniffer/3.3.0/bin/CodeSniffer.conf
 // That will need to be done after every `brew upgrade`, because the folder will change.
+// You might also need to setup a symlink if the username on this device is different.
 
 $phpCodeSnifferConfig = array(
 	'installed_paths'  => '/Users/iandunn/vhosts/tools/wordpress-coding-standards/',
