Git: Add `newdate` alias to update commit date

--- a/.gitconfig
+++ b/.gitconfig
@@ -34,6 +34,15 @@
 	stashshow = "!git stash show -p stash@{\"$1\"} #"
 	svnrebasemirror = !git checkout master && git pull origin master && git svn rebase && git push origin master
 
+	# ideally want this to automatically run on every commit whenever it's modified in any way.
+	# e.g., want the date of the commit to be the _modified_ date, not the _created_ date
+	# otherwise i create a commit in a branch, the feature gets de-prioritized, then i come back a few months later and continue working
+	# i squash everything down to that first few commits, but their dates are months in the past, so viewing the commit history doesn't make sense
+	# you see older commits appearing before newer commits
+	#
+	# this is a step towards that, but only applies to HEAD. look for way to automate for all modified commits
+	newdate = commit --amend --date=now --no-edit
+
 [diff]
 	tool = dw
 	noprefix = true
