--- a/.gitconfig
+++ b/.gitconfig
@@ -19,12 +19,15 @@
 	logdef   = log ...production
 		# make ^ automatically pick the default branch for git, and `git-svn` ref for git-svn
 		# see comments around `phpcs-changed-git` for notes on getting default
+	logorg   = log ...origin
+		# should compare current local branch to current remote branch. might works on production, might not work on untracked branches
 	logm     = log --no-abbrev-commit --format=medium
 	pullas	 = pull --autostash
 	# push = todo a bash function that checks if the current folder is wordcamp.test. if it is, then show a prompt asking if want to run pre-commit githooks. defaults to no (b/c working on branch). can answer yes if ready to run over entire branch for pr, or before pushing to production branch
 	reba	 = rebase --abort
 	rebc	 = rebase --continue
 	rebi     = rebase -i production # todo get default branch, since prod is only for wordcamp repo
+	reshh	 = reset --hard HEAD
 	stat     = status
 	statlong = status --long
 	showm    = show --no-abbrev-commit --format=medium  # Appending `m` for `medium` because can't overwrite default `show` command :( -- see https://stackoverflow.com/questions/3538774/is-it-possible-to-override-git-command-by-git-alias
