--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,4 @@
-# TODO figure out why symlinks don't work for this. Until then, have to manually copy this to ~/.ssh/config after making changes
+# Note: This has to be hard-linked, because ssh doesn't support symlinks.
 
 Host *
 	ServerAliveInterval 60
@@ -29,7 +29,7 @@ Host samantha
 	Hostname 142.93.19.77
 	User root
 
-Host support.wordcamp.org
+Host support.wordcamp.org support marx
 	Hostname support.wordcamp.org
 	User wordcamp
 
