Insurgency: Move shared settings to global config

--- a/insurgency/server_firefight.cfg
+++ b/insurgency/server_firefight.cfg
@@ -1,8 +1,5 @@
+exec server_gamemode_global
 
 //
-// Custom values
+// Custom firefight-specific values
 //
-"mp_maxrounds"						"3"
-"mp_winlimit"						"2"
-"mp_roundtime"						"900"
-"mp_supply_token_base"				"30"
