--- a/insurgency/server_hunt.cfg
+++ b/insurgency/server_hunt.cfg
@@ -1,11 +1,6 @@
+exec server_gamemode_global
 
 //
-// Custom values
+// Custom hunt-specific values
 //
-"mp_maxrounds"							"3"
-"mp_roundtime"							"3600"
-"mp_winlimit_coop"						"2"
-"mp_supply_token_base"					"30"
-"mp_supply_token_bot_base"				"30"
-"mp_hunt_counterattack_distance" 		"60000" 		// distance bots will respond to a cache blowing up. hopefully this makes them respond for all over the map
-"ins_bot_rpg_minimum_player_cluster"	"8"				// disable RPGs
+"mp_hunt_counterattack_distance"		"99999"		// The distance bots will respond to a cache blowing up. Hopefully setting high will make them respond from all over the map, rather than having to search around for them endlessly. They might be stuck, though.
