--- a/insurgency/server_occupy.cfg
+++ b/insurgency/server_occupy.cfg
@@ -1,22 +1,5 @@
-//
-//
+exec server_gamemode_global
 
 //
-// Custom values
+// Custom occupy-specific values
 //
-
-// Longer rounds, so win by draining other team's waves, rather than time running out. Fewer rounds, though, so don't get tired. can always replay if want to.
-"mp_roundtime"					"900"
-"mp_maxrounds"					"3"
-"mp_winlimit"					"2"
-
-// More like hardcore coop
-"mp_supply_token_base"				"30"
-
-// Games are only fun when they're close, so handicap the winning team a bit.
-// Note: It usually also takes manually removing ~2 bots from your team with `ins_bot_kick_t{n}`.
-	// doh, this isn't going to matter b/c supply base is now 20.
-	// what other things can you do to balance the teams (in terms of skill, not numbers)
-"mp_supply_rate_winning_team_high"	"1"
-"mp_supply_rate_winning_team_low"	"0"
-
