--- a/insurgency/server_push.cfg
+++ b/insurgency/server_push.cfg
@@ -1,13 +1,5 @@
+exec server_gamemode_global
 
 //
-// Custom values
+// Custom push-specific values
 //
-
-
-"mp_maxrounds"						"3"
-"mp_winlimit"						"2"
-"mp_roundtime"						"600"
-"mp_supply_token_base"				"30"
-"mp_supply_rate_winning_team_high"	"1"
-"mp_supply_rate_winning_team_low"	"0"
-"mp_switchteams_each_round"			"0"
