--- a/insurgency/server_strike.cfg
+++ b/insurgency/server_strike.cfg
@@ -1,10 +1,5 @@
+exec server_gamemode_global
 
 //
-// Custom values
+// Custom strike-specific values
 //
-
-"mp_maxrounds"						"3"
-"mp_winlimit"						"2"
-"mp_roundtime"						"600"
-"mp_supply_token_base"				"30"
-"mp_switchteams_each_round"			"0"
