--- a/insurgency/server_gamemode_global.cfg
+++ b/insurgency/server_gamemode_global.cfg
@@ -2,13 +2,13 @@
 // Note that `default_server_{gamemode}` is applied first, then `server_{gamemode}`, so you can rely on the defaults being there. All you have to do is override the things you want to change.
 
 // More fun to not be restricted by supply.
-"mp_supply_token_base"					"30"
-"mp_supply_token_bot_base"				"30"
+"mp_supply_token_base"		30"
+"mp_supply_token_bot_base"	30"
 
 // 3/5 can be too long sometimes. Can always replay if want more.
-"mp_maxrounds"							"3"
-"mp_winlimit"						"2"
-"mp_winlimit_coop"						"2"
+"mp_maxrounds"		"3"
+"mp_winlimit"		"2"
+"mp_winlimit_coop"	"2"
 
 // Games are only fun when they're close, so handicap the winning team a bit.
 // Note: It usually also takes manually removing ~2 bots from your team with `ins_bot_kick_t{n}`.
