Insurgency: Echo filename to help debug

--- a/insurgency/cfg/autoexec.cfg
+++ b/insurgency/cfg/autoexec.cfg
@@ -1,10 +1,11 @@
+echo "Applying autoexec"
+
 // Note:
 // For some options, it seems like `exec autoexec` in the console is enough to load them, after saving this file.
 // For others, you have to exit back to the main menu, or even exit the whole game.
 // This is only for client-side options. Server options must go in `server.cfg`, `server_{gamemode}.cfg`, etc.
 
 
-echo "Begin autoexec."
 
 
 // Instantly resupply at spawn
@@ -22,5 +23,3 @@ bind "1" "slot2;slot1"
 cl_cmdrate 128
 Cl_updaterate 128
 Rate 128000
-
-echo "End autoexec."
