--- a/insurgency/cfg/server.cfg
+++ b/insurgency/cfg/server.cfg
@@ -1,3 +1,5 @@
+echo "Applying server"
+
 // Note:
 // This is only for settings that apply to all game modes. Individual mode files like `server_occupy.cfg` will override anything here.
 // If unsure about a command or its potential values, type the command in console without any value. it'll show current value, default value, and explanation
