--- a/insurgency/cfg/server_gamemode_global.cfg
+++ b/insurgency/cfg/server_gamemode_global.cfg
@@ -1,3 +1,5 @@
+echo "Applying server_gamemode_global"
+
 // This file should be exec'd by other configs, to start with a consistent base of shared values. Include this first so they can be overridden if desired.
 // Note that `default_server_{gamemode}` is applied first, then `server_{gamemode}`, so you can rely on the defaults being there. All you have to do is override the things you want to change.
 
