Insurgency: Make server/server_solo DRY

--- a/insurgency/cfg/server.cfg
+++ b/insurgency/cfg/server.cfg
@@ -1,27 +1,3 @@
-echo "Applying server"
+echo "Applying server_solo"
 
-// Note:
-// This is only for settings that apply to all game modes. Individual mode files like `server_occupy.cfg` will override anything here.
-// If unsure about a command or its potential values, type the command in console without any value. it'll show current value, default value, and explanation
-
-
-//
-// Custom values
-//
-
-
-"mp_timer_pregame"		"0"	// timer for the pre-game (before the game starts, usually after map change or on mp_restartgame 1)
-"mp_timer_preround"		"0"		// timer for the pre-round (before the round starts, usually after a previous round ends or on mp_restartround 1)
-"mp_timer_postround"	"0"		// timer for the post-round (after the round starts)
-"mp_timer_postgame"		"0"		// timer for the post-game (at the end of a game / map rotation)
-"mp_tkpunish"		"2"		// How to punish team killing ( 0 = none, 1 = warning, 2 = kill )
-"ins_bot_quota"		"4"		// if set higher than 0, the server will add this many bots to each team.
-	// More bots means more contact, but will still want to kick bots from your team.
-sv_lan 			"1"			 // Server is a lan server ( no heartbeat, no authentication, no non-class C addresses )
-sv_pausable 	"1"          // Is the server pausable.
-
-
-mp_chattime "2" 		 // Length of Time (in Seconds) for Players to Commune When the Game is Over (min. 2.000000 max. 10.000000)
-
-mp_timer_voting 10
-	// Time given to post-game voting
+exec server_solo
