--- a/.gitconfig
+++ b/.gitconfig
@@ -25,11 +25,13 @@
 	logorg   = log ...origin
 		# should compare current local branch to current remote branch. might works on production, might not work on untracked branches
 	logm     = log --no-abbrev-commit --format=medium
+	logsvn   = log ...git-svn
 	pullas	 = pull --autostash
 	# push = todo a bash function that checks if the current folder is wordcamp.test. if it is, then show a prompt asking if want to run pre-commit githooks. defaults to no (b/c working on branch). can answer yes if ready to run over entire branch for pr, or before pushing to production branch
 	reba	 = rebase --abort
 	rebc	 = rebase --continue
 	rebi     = rebase -i production # todo get default branch, since prod is only for wordcamp repo
+
 	reshh	 = reset --hard HEAD
 	stat     = status
 	statlong = status --long
