Insurgency: Misc small tweaks

--- a/insurgency/cfg/autoexec.cfg
+++ b/insurgency/cfg/autoexec.cfg
@@ -9,11 +9,12 @@ echo "Applying autoexec"
 
 
 // Instantly resupply at spawn
-bind "h" "inventory_resupply"
+bind "g" "inventory_resupply"
 
 // Mute annoying sounds like sprinkers (have to press every time they start going off again)
 // also stops pre-game announcer describing the mission
-bind "g" "snd_restart"
+bind "h" "snd_restart"
+    // todo maybe something on left hand, so don't have to leave mouse? t? e? f?
 
 // Pressing 1 goes to sidearm if you don't have a primary
 bind "1" "slot2;slot1"
