--- a/insurgency/cfg/config.cfg
+++ b/insurgency/cfg/config.cfg
@@ -15,13 +15,13 @@ bind "c" "+radialmenu"
 bind "d" "+moveright"
 bind "e" "+leanright"
 bind "f" "+use"
-bind "g" "snd_restart"
-bind "h" "inventory_resupply"
+bind "g" "inventory_resupply"
+bind "h" "snd_restart"
 bind "m" "changeinventory"
 bind "q" "+leanleft"
 bind "r" "+reload"
 bind "s" "+back"
-bind "t" "impulse 201"
+bind "t" "+flashlight"
 bind "u" "messagemode2"
 bind "v" "+compass"
 bind "w" "+forward"
@@ -130,7 +130,7 @@ cl_grenade_auto_switch "1"
 cl_hq_messages_enabled "1"
 cl_hud_chat_subtitles "1"
 cl_hud_compass_alpha "255"
-cl_hud_compass_appear_enemy "2.0"
+cl_hud_compass_appear_enemy "4.0"
 cl_hud_compass_bgalpha "0.85"
 cl_hud_compass_fadetime "0.45"
 cl_hud_compass_holdtime "0.2"
@@ -157,7 +157,7 @@ cl_hud_firemode_show_always "0"
 cl_hud_radial_controls "3"
 cl_hud_radial_fadein_delay "0.1"
 cl_hud_radial_fadein_duration "0.1"
-cl_hud_voices_show_local "0"
+cl_hud_voices_show_local "1"
 cl_hud_voices_show_names "1"
 cl_idealpitchscale "0.8"
 cl_interp "0.03125"
@@ -215,8 +215,8 @@ hud_targetid_enabled "1"
 hud_targetid_radial_duration "3.0"
 ins_bot_count_checkpoint "20"
 ins_bot_count_checkpoint_default "0"
-ins_bot_count_checkpoint_max "16"
-ins_bot_count_checkpoint_min "5"
+ins_bot_count_checkpoint_max "24"
+ins_bot_count_checkpoint_min "8"
 ins_bot_count_conquer "0"
 ins_bot_count_conquer_default "0"
 ins_bot_count_conquer_solo "8"
@@ -406,7 +406,7 @@ snd_legacy_surround "0"
 snd_mixahead "0.1"
 snd_musicvolume "0.000000"
 snd_pitchquality "1"
-snd_radio_filter "1"
+snd_radio_filter "0"
 spec_bank "0"
 spec_bank_angle "4"
 spec_bank_override "0"
@@ -461,7 +461,7 @@ voice_forcemicrecord "1"
 voice_modenable "1"
 voice_scale "0.807487"
 voice_threshold "2000"
-volume "1.000000"
+volume "0.893048"
 vprof_graph_averagingwindow "32"
 vprof_graphheight "256"
 vprof_graphwidth "0"
