--- a/insurgency/cfg/server.cfg
+++ b/insurgency/cfg/server.cfg
@@ -6,6 +6,8 @@ echo "Applying server_solo"
 // This is only for settings that apply to all game modes. Individual mode files like `server_occupy.cfg` will override anything here.
 // If unsure about a command or its potential values, type the command in console without any value. it'll show current value, default value, and explanation
 
+// see https://www.citadelservers.com/client/knowledgebase/228/List-of-gamemode-config-files-and-how-to-edit-them.html
+// https://developer.valvesoftware.com/wiki/CFG
 
 //
 // Custom values
