--- a/insurgency/cfg/server_occupy.cfg
+++ b/insurgency/cfg/server_occupy.cfg
@@ -5,3 +5,7 @@ echo "Applying server_occupy"
 //
 // Custom occupy-specific values
 //
+
+"mp_wave_count_perteam"		"7"		// Default of 5 feels too short for this mode, especially when global `mp_winlimit` is 2.
+"mp_wave_capture_increment"	"10"	// Closer to `mp_cp_capture_time`. Default `1` is just too fast/easy.
+
