SSH: Add `wpf` alias for WP Foundation site

--- a/.ssh/config
+++ b/.ssh/config
@@ -37,7 +37,7 @@ Host wordpress.org wordcamp.org w.org
 	Hostname iandunn.dev.ord.wordpress.org
 	User wporgdev
 
-Host wordpressfoundation.org
+Host wordpressfoundation.org wpf
 	Hostname wordpressfoundation.org
 	User wpf
 
