SSH: Enable `ForwardAgent` on w.org so can push to GitHub.

--- a/.ssh/config
+++ b/.ssh/config
@@ -36,6 +36,7 @@ Host support.wordcamp.org support marx
 Host wordpress.org wordcamp.org w.org
 	Hostname iandunn.dev.ord.wordpress.org
 	User wporgdev
+	ForwardAgent yes
 
 Host wordpressfoundation.org wpf
 	Hostname wordpressfoundation.org
